@@ -26,23 +26,24 @@ class CreateDynamicForms < ActiveRecord::Migration
     
     create_table :form_submissions, :force => true do |t|
       t.column "form_id", :integer, :limit => 11
-      t.column "user_id", :integer, :limit => 11
+      t.column "submitter_type", :string
+      t.column "submitter_id", :integer, :limit => 11
       t.column "data", :text
       t.column "created_at", :datetime
       t.column "updated_at", :datetime
     end
     
     add_index :form_submissions, ["form_id"], :name => "index_form_submissions_on_form_id"
-    add_index :form_submissions, ["user_id"], :name => "index_form_submissions_on_user_id"
-    add_index :form_submissions, ["form_id", "user_id"], :name => "index_form_submissions_on_form_id_and_user_id"
+    add_index :form_submissions, ["submitter_type", "submitter_id"], :name => "index_form_submissions_on_submitter"
+    add_index :form_submissions, ["form_id", "submitter_type", "submitter_id"], :name => "index_form_submissions_on_form_id_and_submitter"
     
     create_table :forms, :force => true do |t|
       t.column "name", :string
       t.column "submit_label", :string
       t.column "email", :string
       t.column "email_submissions", :boolean, :default => false, :null => false
-      t.column "formable_type", :string
-      t.column "formable_id", :integer, :limit => 11
+      t.column "creator_type", :string
+      t.column "creator_id", :integer, :limit => 11
       t.column "created_at", :datetime
       t.column "updated_at", :datetime
       t.column "instructions", :text
@@ -50,7 +51,7 @@ class CreateDynamicForms < ActiveRecord::Migration
       t.column "active", :boolean, :default => true
     end
     
-    add_index :forms, ["formable_type", "formable_id"], :name => "index_forms_on_formable_type_and_formable_id"
+    add_index :forms, ["creator_type", "creator_id"], :name => "index_forms_on_creator"
   end
   
   def self.down
